# obsidian-mcp-guard

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
obsidian_mcp_guard/: __init__.py  __main__.py  lint.py  paths.py  server.py
tests/: test_server.py
