[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-mcp-guard"
version = "0.1.6"
description = "MCP server for agent-safe Obsidian vault access with lint validation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["obsidian", "mcp", "model-context-protocol", "guard", "write-protection", "markdown", "knowledge-management", "ai", "llm", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "fastmcp>=2.0",
    "mdlint-obsidian>=v0.2.0",
]

[project.urls]
Homepage = "https://github.com/codeafix/obsidian-mcp-guard"
Repository = "https://github.com/codeafix/obsidian-mcp-guard"
Issues = "https://github.com/codeafix/obsidian-mcp-guard/issues"

[project.scripts]
obsidian-mcp-guard = "obsidian_mcp_guard.__main__:main"

